--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,6 +1,6 @@
-body {
-  margin: 0;
-  padding: 0; }
+.sidebar {
+  background-color: #c69963;
+}
 
 .nav-button {
   border: none;
@@ -8,4 +8,5 @@ body {
   background-color: #fff;
   height: 2px;
   width: 4.5rem;
-  margin-top: 4rem; }
+  margin-top: 4rem;
+}
