--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,65 @@
-body {
+*,
+*::before,
+*::after {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
+
+body {
+  font-family: "Nunito", sans-serif;
+  color: #6d5d4b;
+  font-weight: 300;
+  line-height: 1.6; }
+
+.container {
+  display: grid;
+  display: grid;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 62.5em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem); } }
+
+.sidebar {
+  background-color: #c69963;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / -1;
+  display: flex;
+  justify-content: center; }
 
 .nav-button {
   border: none;
   border-radius: 0;
   background-color: #fff;
-  height: 2px;
+  height: 0.2rem;
   width: 4.5rem;
   margin-top: 4rem; }
+  .nav-button::before, .nav-button::after {
+    background-color: #fff;
+    height: 0.2rem;
+    width: 4.5rem;
+    content: "";
+    display: block; }
+  .nav-button::before {
+    transform: translateY(-1.5rem); }
+  .nav-button::after {
+    transform: translateY(1.3rem); }
+  @media only screen and (max-width: 62.5em) {
+    .nav-button {
+      margin-top: 0;
+      margin-right: 3rem; }
+      .nav-button::before {
+        transform: translateY(-1.2rem); }
+      .nav-button::after {
+        transform: translateY(1rem); } }
