--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,5 +2,8 @@
 @import "typography";
 @import "sidebar";
 @import "header";
-@import "realtors"
+@import "realtors";
+@import "features"
+@import "/sass/story"
+
 
