--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,5 @@
 @import "sidebar";
 @import "header";
 @import "realtors";
-@import "features"
-@import "/sass/story"
-
-
+@import "features";
+@import "story";
